# mcp-pai-oncology-trials

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  posts.md  prompts.md  pyproject.toml  releases.md
clients/: __init__.py
clients/reference_agent/src/: trial_robot_agent.py
datasets/: README.md  manifest.json
datasets/dicom-samples/: study_index.json
datasets/fhir-bundles/: oncology_trial_bundle.json
datasets/scheduling/: trial_schedule.json
papers/: README.md
papers/ClinOps/: README  trialmcp_clinops.bib  trialmcp_clinops.sty  trialmcp_clinops.tex
papers/Interoperability/: README  trialmcp_interop.bib  trialmcp_interop.sty  trialmcp_interop.tex
papers/Regulatory/: README  trialmcp_regulatory.bib  trialmcp_regulatory.sty  trialmcp_regulatory.tex
peer-review/: trialmcp_pack_v0.1.1_peer_review.md  v0.2.0_peer_review_response.md
servers/: __init__.py
servers/common/: __init__.py
servers/trialmcp_authz/src/: authz_server.py
servers/trialmcp_dicom/src/: dicom_server.py
servers/trialmcp_fhir/src/: fhir_server.py
servers/trialmcp_ledger/src/: ledger_server.py
servers/trialmcp_provenance/src/: provenance_server.py
tests/audit/: test_audit_completeness.py
tests/integration/: test_robot_workflow.py
tests/security/: test_ssrf_injection.py
